# simple_simulator

./: .gitignore  README.md
docs/: 001_ROS2_Gazebo_2륜_구동_로봇_시뮬레이션_구축.md  002_ROS2_Gazebo_로봇에_LiDAR_센서_및_SLAM_추가.md  003_ROS2_Gazebo_Nav2_자율주행_구현.md  004_URDF에서_Xacro로_전환.md
src/robot_description/: package.xml  setup.py
src/robot_description/config/: nav2_params.yaml  slam_params.yaml
src/robot_description/launch/: navigation.launch.py  spawn_robot.launch.py
src/robot_description/maps/: factory_map.pgm  factory_map.yaml
src/robot_description/resource/: robot.urdf  robot.xacro
src/robot_description/robot_description/: scan_frame_changer.py
src/robot_description/worlds/: factory_warehouse.sdf
